# algo_trading

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  analise_algo_trading.md  executar_bot.txt  handoff_reconstrucao.md  pyproject.toml  tarefa_dois_timeframes.md  tarefa_enum_role.md  tarefa_log_cores.md  tarefa_log_datasets.md  tarefa_margin_roi.md  tarefa_migrar_market_data.md  tarefa_papeis_na_estrategia.md  tarefa_roles_dentro_estrategia.md  tarefa_timeframes_dinamicos.md  tarefa_unificar_log.md
binance/strategy_toml/: triple-ema.toml
binance/symbol_toml/: btcusdt.toml  solusdt.toml
binance/system_toml/: system_settings.toml
binance/usdm_futures/: __init__.py
binance/usdm_futures/app/: bootstrap.py  main.py
binance/usdm_futures/config/: __init__.py  schedule.py  secrets.py  strategy_config.py  symbol_config.py
binance/usdm_futures/domain/: errors.py
binance/usdm_futures/domain/models/: __init__.py  indicator_data.py  ohlcv_field.py  role.py  (+3 more)
binance/usdm_futures/execution/: order_executor.py  order_utils.py  position_tracker.py  protection_orders.py
binance/usdm_futures/indicators/: __init__.py  ema.py  macd.py
binance/usdm_futures/infrastructure/: errors.py  exchange_client.py
binance/usdm_futures/logging/: logger.py
binance/usdm_futures/market_data/: memory_repository.py  source.py  transform.py
binance/usdm_futures/orchestration/: symbol_runner.py
binance/usdm_futures/shared/: helpers.py  market_hours.py
binance/usdm_futures/strategy/: __init__.py  null_strategy.py  triple_ema.py
system_toml/: system_settings.toml
(+20 files in other folders)
